tooling/nargo_cli/tests/snapshots/execution_success/ecdsa_secp256r1_invalid_pub_key_in_inactive_branch/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(
    pub_key_x: [u8; 32],
    pub_key_y: [u8; 32],
    signature: [u8; 64],
    hashed_message: [u8; 32],
    active: bool,
) {
    if active {
        assert(std::ecdsa_secp256r1::verify_signature(
            pub_key_x,
            pub_key_y,
            signature,
            hashed_message,
        ));
    }
}
