tooling/nargo_cli/tests/snapshots/execution_success/ecdsa_secp256r1_invalid_pub_key_in_inactive_branch/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "pub_key_x",
        "type": {
          "kind": "array",
          "length": 32,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        },
        "visibility": "private"
      },
      {
        "name": "pub_key_y",
        "type": {
          "kind": "array",
          "length": 32,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        },
        "visibility": "private"
      },
      {
        "name": "signature",
        "type": {
          "kind": "array",
          "length": 64,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        },
        "visibility": "private"
      },
      {
        "name": "hashed_message",
        "type": {
          "kind": "array",
          "length": 32,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        },
        "visibility": "private"
      },
      {
        "name": "active",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _225",
    "private parameters indices : [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9, _10, _11, _12, _13, _14, _15, _16, _17, _18, _19, _20, _21, _22, _23, _24, _25, _26, _27, _28, _29, _30, _31, _32, _33, _34, _35, _36, _37, _38, _39, _40, _41, _42, _43, _44, _45, _46, _47, _48, _49, _50, _51, _52, _53, _54, _55, _56, _57, _58, _59, _60, _61, _62, _63, _64, _65, _66, _67, _68, _69, _70, _71, _72, _73, _74, _75, _76, _77, _78, _79, _80, _81, _82, _83, _84, _85, _86, _87, _88, _89, _90, _91, _92, _93, _94, _95, _96, _97, _98, _99, _100, _101, _102, _103, _104, _105, _106, _107, _108, _109, _110, _111, _112, _113, _114, _115, _116, _117, _118, _119, _120, _121, _122, _123, _124, _125, _126, _127, _128, _129, _130, _131, _132, _133, _134, _135, _136, _137, _138, _139, _140, _141, _142, _143, _144, _145, _146, _147, _148, _149, _150, _151, _152, _153, _154, _155, _156, _157, _158, _159, _160]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [_0]:8 bits []",
    "BLACKBOX::RANGE [_1]:8 bits []",
    "BLACKBOX::RANGE [_2]:8 bits []",
    "BLACKBOX::RANGE [_3]:8 bits []",
    "BLACKBOX::RANGE [_4]:8 bits []",
    "BLACKBOX::RANGE [_5]:8 bits []",
    "BLACKBOX::RANGE [_6]:8 bits []",
    "BLACKBOX::RANGE [_7]:8 bits []",
    "BLACKBOX::RANGE [_8]:8 bits []",
    "BLACKBOX::RANGE [_9]:8 bits []",
    "BLACKBOX::RANGE [_10]:8 bits []",
    "BLACKBOX::RANGE [_11]:8 bits []",
    "BLACKBOX::RANGE [_12]:8 bits []",
    "BLACKBOX::RANGE [_13]:8 bits []",
    "BLACKBOX::RANGE [_14]:8 bits []",
    "BLACKBOX::RANGE [_15]:8 bits []",
    "BLACKBOX::RANGE [_16]:8 bits []",
    "BLACKBOX::RANGE [_17]:8 bits []",
    "BLACKBOX::RANGE [_18]:8 bits []",
    "BLACKBOX::RANGE [_19]:8 bits []",
    "BLACKBOX::RANGE [_20]:8 bits []",
    "BLACKBOX::RANGE [_21]:8 bits []",
    "BLACKBOX::RANGE [_22]:8 bits []",
    "BLACKBOX::RANGE [_23]:8 bits []",
    "BLACKBOX::RANGE [_24]:8 bits []",
    "BLACKBOX::RANGE [_25]:8 bits []",
    "BLACKBOX::RANGE [_26]:8 bits []",
    "BLACKBOX::RANGE [_27]:8 bits []",
    "BLACKBOX::RANGE [_28]:8 bits []",
    "BLACKBOX::RANGE [_29]:8 bits []",
    "BLACKBOX::RANGE [_30]:8 bits []",
    "BLACKBOX::RANGE [_31]:8 bits []",
    "BLACKBOX::RANGE [_32]:8 bits []",
    "BLACKBOX::RANGE [_33]:8 bits []",
    "BLACKBOX::RANGE [_34]:8 bits []",
    "BLACKBOX::RANGE [_35]:8 bits []",
    "BLACKBOX::RANGE [_36]:8 bits []",
    "BLACKBOX::RANGE [_37]:8 bits []",
    "BLACKBOX::RANGE [_38]:8 bits []",
    "BLACKBOX::RANGE [_39]:8 bits []",
    "BLACKBOX::RANGE [_40]:8 bits []",
    "BLACKBOX::RANGE [_41]:8 bits []",
    "BLACKBOX::RANGE [_42]:8 bits []",
    "BLACKBOX::RANGE [_43]:8 bits []",
    "BLACKBOX::RANGE [_44]:8 bits []",
    "BLACKBOX::RANGE [_45]:8 bits []",
    "BLACKBOX::RANGE [_46]:8 bits []",
    "BLACKBOX::RANGE [_47]:8 bits []",
    "BLACKBOX::RANGE [_48]:8 bits []",
    "BLACKBOX::RANGE [_49]:8 bits []",
    "BLACKBOX::RANGE [_50]:8 bits []",
    "BLACKBOX::RANGE [_51]:8 bits []",
    "BLACKBOX::RANGE [_52]:8 bits []",
    "BLACKBOX::RANGE [_53]:8 bits []",
    "BLACKBOX::RANGE [_54]:8 bits []",
    "BLACKBOX::RANGE [_55]:8 bits []",
    "BLACKBOX::RANGE [_56]:8 bits []",
    "BLACKBOX::RANGE [_57]:8 bits []",
    "BLACKBOX::RANGE [_58]:8 bits []",
    "BLACKBOX::RANGE [_59]:8 bits []",
    "BLACKBOX::RANGE [_60]:8 bits []",
    "BLACKBOX::RANGE [_61]:8 bits []",
    "BLACKBOX::RANGE [_62]:8 bits []",
    "BLACKBOX::RANGE [_63]:8 bits []",
    "BLACKBOX::RANGE [_64]:8 bits []",
    "BLACKBOX::RANGE [_65]:8 bits []",
    "BLACKBOX::RANGE [_66]:8 bits []",
    "BLACKBOX::RANGE [_67]:8 bits []",
    "BLACKBOX::RANGE [_68]:8 bits []",
    "BLACKBOX::RANGE [_69]:8 bits []",
    "BLACKBOX::RANGE [_70]:8 bits []",
    "BLACKBOX::RANGE [_71]:8 bits []",
    "BLACKBOX::RANGE [_72]:8 bits []",
    "BLACKBOX::RANGE [_73]:8 bits []",
    "BLACKBOX::RANGE [_74]:8 bits []",
    "BLACKBOX::RANGE [_75]:8 bits []",
    "BLACKBOX::RANGE [_76]:8 bits []",
    "BLACKBOX::RANGE [_77]:8 bits []",
    "BLACKBOX::RANGE [_78]:8 bits []",
    "BLACKBOX::RANGE [_79]:8 bits []",
    "BLACKBOX::RANGE [_80]:8 bits []",
    "BLACKBOX::RANGE [_81]:8 bits []",
    "BLACKBOX::RANGE [_82]:8 bits []",
    "BLACKBOX::RANGE [_83]:8 bits []",
    "BLACKBOX::RANGE [_84]:8 bits []",
    "BLACKBOX::RANGE [_85]:8 bits []",
    "BLACKBOX::RANGE [_86]:8 bits []",
    "BLACKBOX::RANGE [_87]:8 bits []",
    "BLACKBOX::RANGE [_88]:8 bits []",
    "BLACKBOX::RANGE [_89]:8 bits []",
    "BLACKBOX::RANGE [_90]:8 bits []",
    "BLACKBOX::RANGE [_91]:8 bits []",
    "BLACKBOX::RANGE [_92]:8 bits []",
    "BLACKBOX::RANGE [_93]:8 bits []",
    "BLACKBOX::RANGE [_94]:8 bits []",
    "BLACKBOX::RANGE [_95]:8 bits []",
    "BLACKBOX::RANGE [_96]:8 bits []",
    "BLACKBOX::RANGE [_97]:8 bits []",
    "BLACKBOX::RANGE [_98]:8 bits []",
    "BLACKBOX::RANGE [_99]:8 bits []",
    "BLACKBOX::RANGE [_100]:8 bits []",
    "BLACKBOX::RANGE [_101]:8 bits []",
    "BLACKBOX::RANGE [_102]:8 bits []",
    "BLACKBOX::RANGE [_103]:8 bits []",
    "BLACKBOX::RANGE [_104]:8 bits []",
    "BLACKBOX::RANGE [_105]:8 bits []",
    "BLACKBOX::RANGE [_106]:8 bits []",
    "BLACKBOX::RANGE [_107]:8 bits []",
    "BLACKBOX::RANGE [_108]:8 bits []",
    "BLACKBOX::RANGE [_109]:8 bits []",
    "BLACKBOX::RANGE [_110]:8 bits []",
    "BLACKBOX::RANGE [_111]:8 bits []",
    "BLACKBOX::RANGE [_112]:8 bits []",
    "BLACKBOX::RANGE [_113]:8 bits []",
    "BLACKBOX::RANGE [_114]:8 bits []",
    "BLACKBOX::RANGE [_115]:8 bits []",
    "BLACKBOX::RANGE [_116]:8 bits []",
    "BLACKBOX::RANGE [_117]:8 bits []",
    "BLACKBOX::RANGE [_118]:8 bits []",
    "BLACKBOX::RANGE [_119]:8 bits []",
    "BLACKBOX::RANGE [_120]:8 bits []",
    "BLACKBOX::RANGE [_121]:8 bits []",
    "BLACKBOX::RANGE [_122]:8 bits []",
    "BLACKBOX::RANGE [_123]:8 bits []",
    "BLACKBOX::RANGE [_124]:8 bits []",
    "BLACKBOX::RANGE [_125]:8 bits []",
    "BLACKBOX::RANGE [_126]:8 bits []",
    "BLACKBOX::RANGE [_127]:8 bits []",
    "BLACKBOX::RANGE [_128]:8 bits []",
    "BLACKBOX::RANGE [_129]:8 bits []",
    "BLACKBOX::RANGE [_130]:8 bits []",
    "BLACKBOX::RANGE [_131]:8 bits []",
    "BLACKBOX::RANGE [_132]:8 bits []",
    "BLACKBOX::RANGE [_133]:8 bits []",
    "BLACKBOX::RANGE [_134]:8 bits []",
    "BLACKBOX::RANGE [_135]:8 bits []",
    "BLACKBOX::RANGE [_136]:8 bits []",
    "BLACKBOX::RANGE [_137]:8 bits []",
    "BLACKBOX::RANGE [_138]:8 bits []",
    "BLACKBOX::RANGE [_139]:8 bits []",
    "BLACKBOX::RANGE [_140]:8 bits []",
    "BLACKBOX::RANGE [_141]:8 bits []",
    "BLACKBOX::RANGE [_142]:8 bits []",
    "BLACKBOX::RANGE [_143]:8 bits []",
    "BLACKBOX::RANGE [_144]:8 bits []",
    "BLACKBOX::RANGE [_145]:8 bits []",
    "BLACKBOX::RANGE [_146]:8 bits []",
    "BLACKBOX::RANGE [_147]:8 bits []",
    "BLACKBOX::RANGE [_148]:8 bits []",
    "BLACKBOX::RANGE [_149]:8 bits []",
    "BLACKBOX::RANGE [_150]:8 bits []",
    "BLACKBOX::RANGE [_151]:8 bits []",
    "BLACKBOX::RANGE [_152]:8 bits []",
    "BLACKBOX::RANGE [_153]:8 bits []",
    "BLACKBOX::RANGE [_154]:8 bits []",
    "BLACKBOX::RANGE [_155]:8 bits []",
    "BLACKBOX::RANGE [_156]:8 bits []",
    "BLACKBOX::RANGE [_157]:8 bits []",
    "BLACKBOX::RANGE [_158]:8 bits []",
    "BLACKBOX::RANGE [_159]:8 bits []",
    "BLACKBOX::RANGE [_160]:1 bits []",
    "EXPR [ (1, _0, _160) (-107, _160) (-1, _161) 107 ]",
    "EXPR [ (1, _1, _160) (-23, _160) (-1, _162) 23 ]",
    "EXPR [ (1, _2, _160) (-209, _160) (-1, _163) 209 ]",
    "EXPR [ (1, _3, _160) (-242, _160) (-1, _164) 242 ]",
    "EXPR [ (1, _4, _160) (-225, _160) (-1, _165) 225 ]",
    "EXPR [ (1, _5, _160) (-44, _160) (-1, _166) 44 ]",
    "EXPR [ (1, _6, _160) (-66, _160) (-1, _167) 66 ]",
    "EXPR [ (1, _7, _160) (-71, _160) (-1, _168) 71 ]",
    "EXPR [ (1, _8, _160) (-248, _160) (-1, _169) 248 ]",
    "EXPR [ (1, _9, _160) (-188, _160) (-1, _170) 188 ]",
    "EXPR [ (1, _10, _160) (-230, _160) (-1, _171) 230 ]",
    "EXPR [ (1, _11, _160) (-229, _160) (-1, _172) 229 ]",
    "EXPR [ (1, _12, _160) (-99, _160) (-1, _173) 99 ]",
    "EXPR [ (1, _13, _160) (-164, _160) (-1, _174) 164 ]",
    "EXPR [ (1, _14, _160) (-64, _160) (-1, _175) 64 ]",
    "EXPR [ (1, _15, _160) (-242, _160) (-1, _176) 242 ]",
    "EXPR [ (1, _16, _160) (-119, _160) (-1, _177) 119 ]",
    "EXPR [ (1, _17, _160) (-3, _160) (-1, _178) 3 ]",
    "EXPR [ (1, _18, _160) (-125, _160) (-1, _179) 125 ]",
    "EXPR [ (1, _19, _160) (-129, _160) (-1, _180) 129 ]",
    "EXPR [ (1, _20, _160) (-45, _160) (-1, _181) 45 ]",
    "EXPR [ (1, _21, _160) (-235, _160) (-1, _182) 235 ]",
    "EXPR [ (1, _22, _160) (-51, _160) (-1, _183) 51 ]",
    "EXPR [ (1, _23, _160) (-160, _160) (-1, _184) 160 ]",
    "EXPR [ (1, _24, _160) (-244, _160) (-1, _185) 244 ]",
    "EXPR [ (1, _25, _160) (-161, _160) (-1, _186) 161 ]",
    "EXPR [ (1, _26, _160) (-57, _160) (-1, _187) 57 ]",
    "EXPR [ (1, _27, _160) (-69, _160) (-1, _188) 69 ]",
    "EXPR [ (1, _28, _160) (-216, _160) (-1, _189) 216 ]",
    "EXPR [ (1, _29, _160) (-152, _160) (-1, _190) 152 ]",
    "EXPR [ (1, _30, _160) (-194, _160) (-1, _191) 194 ]",
    "EXPR [ (1, _31, _160) (-150, _160) (-1, _192) 150 ]",
    "EXPR [ (1, _32, _160) (-79, _160) (-1, _193) 79 ]",
    "EXPR [ (1, _33, _160) (-227, _160) (-1, _194) 227 ]",
    "EXPR [ (1, _34, _160) (-66, _160) (-1, _195) 66 ]",
    "EXPR [ (1, _35, _160) (-226, _160) (-1, _196) 226 ]",
    "EXPR [ (1, _36, _160) (-254, _160) (-1, _197) 254 ]",
    "EXPR [ (1, _37, _160) (-26, _160) (-1, _198) 26 ]",
    "EXPR [ (1, _38, _160) (-127, _160) (-1, _199) 127 ]",
    "EXPR [ (1, _39, _160) (-155, _160) (-1, _200) 155 ]",
    "EXPR [ (1, _40, _160) (-142, _160) (-1, _201) 142 ]",
    "EXPR [ (1, _41, _160) (-231, _160) (-1, _202) 231 ]",
    "EXPR [ (1, _42, _160) (-235, _160) (-1, _203) 235 ]",
    "EXPR [ (1, _43, _160) (-74, _160) (-1, _204) 74 ]",
    "EXPR [ (1, _44, _160) (-124, _160) (-1, _205) 124 ]",
    "EXPR [ (1, _45, _160) (-15, _160) (-1, _206) 15 ]",
    "EXPR [ (1, _46, _160) (-158, _160) (-1, _207) 158 ]",
    "EXPR [ (1, _47, _160) (-22, _160) (-1, _208) 22 ]",
    "EXPR [ (1, _48, _160) (-43, _160) (-1, _209) 43 ]",
    "EXPR [ (1, _49, _160) (-206, _160) (-1, _210) 206 ]",
    "EXPR [ (1, _50, _160) (-51, _160) (-1, _211) 51 ]",
    "EXPR [ (1, _51, _160) (-87, _160) (-1, _212) 87 ]",
    "EXPR [ (1, _52, _160) (-107, _160) (-1, _213) 107 ]",
    "EXPR [ (1, _53, _160) (-49, _160) (-1, _214) 49 ]",
    "EXPR [ (1, _54, _160) (-94, _160) (-1, _215) 94 ]",
    "EXPR [ (1, _55, _160) (-206, _160) (-1, _216) 206 ]",
    "EXPR [ (1, _56, _160) (-203, _160) (-1, _217) 203 ]",
    "EXPR [ (1, _57, _160) (-182, _160) (-1, _218) 182 ]",
    "EXPR [ (1, _58, _160) (-64, _160) (-1, _219) 64 ]",
    "EXPR [ (1, _59, _160) (-104, _160) (-1, _220) 104 ]",
    "EXPR [ (1, _60, _160) (-55, _160) (-1, _221) 55 ]",
    "EXPR [ (1, _61, _160) (-191, _160) (-1, _222) 191 ]",
    "EXPR [ (1, _62, _160) (-81, _160) (-1, _223) 81 ]",
    "EXPR [ (1, _63, _160) (-245, _160) (-1, _224) 245 ]",
    "BLACKBOX::ECDSA_SECP256R1 [_161, _162, _163, _164, _165, _166, _167, _168, _169, _170, _171, _172, _173, _174, _175, _176, _177, _178, _179, _180, _181, _182, _183, _184, _185, _186, _187, _188, _189, _190, _191, _192, _193, _194, _195, _196, _197, _198, _199, _200, _201, _202, _203, _204, _205, _206, _207, _208, _209, _210, _211, _212, _213, _214, _215, _216, _217, _218, _219, _220, _221, _222, _223, _224, _64, _65, _66, _67, _68, _69, _70, _71, _72, _73, _74, _75, _76, _77, _78, _79, _80, _81, _82, _83, _84, _85, _86, _87, _88, _89, _90, _91, _92, _93, _94, _95, _96, _97, _98, _99, _100, _101, _102, _103, _104, _105, _106, _107, _108, _109, _110, _111, _112, _113, _114, _115, _116, _117, _118, _119, _120, _121, _122, _123, _124, _125, _126, _127, _128, _129, _130, _131, _132, _133, _134, _135, _136, _137, _138, _139, _140, _141, _142, _143, _144, _145, _146, _147, _148, _149, _150, _151, _152, _153, _154, _155, _156, _157, _158, _159, _160] [_225]",
    "EXPR [ (1, _160, _225) (-1, _160) 0 ]"
  ],
  "debug_symbols": "ddPBjoIwFEDRf+maBa+Ibf2VycQgVtOkKaTCJBPDv0/Vi6MLVxdo30lI2qs6+sN83od0Gi5q93VVhxxiDOd9HPpuCkMqX69LpdbX/ZS9L5/Uy3qZGrvs06R2aY6xUj9dnO+bLmOX7p26XFbrSvl0LC3gKUR/e1qq/+n686gYw3Cjm+d4+z4vn+e1OOa1a5/z0i7Ld3nr+pDf/ljJVsrWqlTThm5oS7fUUEvdo6ameAbP4Bk8g2fwDJ7BM3gWz+JZPItn8SyexbN4Fs/iOTyH5/AcnsNzeA7P4Tk89/B0XVOhmjZ0Q1u6pYZaiid4gid4gid4gid4gid4gqfxNJ7G03gaT+Pp4slyO1g5dIfouQ+nOfUv12P6HdeV9QKNeej9cc7+drDua+Wo/QE=",
  "file_map": {
    "15": {
      "source": "// docs:start:ecdsa_secp256r1\npub fn verify_signature<let N: u32>(\n    public_key_x: [u8; 32],\n    public_key_y: [u8; 32],\n    signature: [u8; 64],\n    message_hash: [u8; N],\n) -> bool\n// docs:end:ecdsa_secp256r1\n{\n    _verify_signature(public_key_x, public_key_y, signature, message_hash, true)\n}\n\n#[foreign(ecdsa_secp256r1)]\npub fn _verify_signature<let N: u32>(\n    public_key_x: [u8; 32],\n    public_key_y: [u8; 32],\n    signature: [u8; 64],\n    message_hash: [u8; N],\n    predicate: bool,\n) -> bool {}\n",
      "path": "std/ecdsa_secp256r1.nr"
    },
    "50": {
      "source": "fn main(\n    pub_key_x: [u8; 32],\n    pub_key_y: [u8; 32],\n    signature: [u8; 64], // r || s\n    hashed_message: [u8; 32],\n    active: bool,\n) {\n    if active {\n        assert(std::ecdsa_secp256r1::verify_signature(\n            pub_key_x,\n            pub_key_y,\n            signature,\n            hashed_message,\n        ));\n    }\n}\n",
      "path": ""
    }
  },
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
