tooling/nargo_cli/tests/snapshots/execution_success/ecdsa_secp256r1_invalid_pub_key_in_inactive_branch/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: [u8; 32], v1: [u8; 32], v2: [u8; 64], v3: [u8; 32], v4: u1):
    (no terminator instruction)
}
